TagChanger, Corpses and MinigameAPI changes